[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Fblapix-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Multiplayer/Online/Network_Setup.gd" type="Script" id=2]
[ext_resource path="res://Assets/title/lb.png" type="Texture" id=3]
[ext_resource path="res://Multiplayer/Online/CanvasLayer.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=31]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=32]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 31 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=33]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=35]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=36]

[node name="Network_Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Multiplayer_Configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -23.5
margin_right = 131.0
margin_bottom = 36.5
custom_fonts/font = SubResource( 32 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 20 )
text = "Create Server"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="Join_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 39.5
margin_right = 124.0
margin_bottom = 108.5
custom_fonts/font = SubResource( 33 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 34 )
text = "Join Server"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="Username_text_edit" type="LineEdit" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -79.5
margin_right = 129.0
margin_bottom = -38.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 11 )
align = 1
max_length = 10
placeholder_text = "Enter Username"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 69.0
custom_fonts/font = SubResource( 35 )

[node name="Start_game" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.5
margin_top = -30.0
margin_right = 115.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 32 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 36 )
text = "Start Game"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[connection signal="pressed" from="Multiplayer_Configure/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="Multiplayer_Configure/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="CanvasLayer/Start_game" to="." method="_on_Start_game_pressed"]
